--- a/EA Waste Tonnage Returns/project.json
+++ b/EA Waste Tonnage Returns/project.json
@@ -3,8 +3,10 @@
   "description": "The main workflow file for the EA Waste Tonnage Returns  Process",
   "main": "Main.xaml",
   "dependencies": {
+    "DMS.Library": "[1.0.9]",
     "ORATS": "[1.0.9]",
     "Reusable.Components": "[1.0.7]",
+    "UiPath.Credentials.Activities": "[1.1.6479.13204]",
     "UiPath.Excel.Activities": "[2.9.3]",
     "UiPath.Mail.Activities": "[1.9.3]",
     "UiPath.System.Activities": "[20.10.1]",
